--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Por favor, habilite o JavaScript para que seja possível utilizar o App.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
